<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_s"
    android:elevation="@dimen/card_elevation"
    app:cardCornerRadius="@dimen/card_radius">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/padding">

        <com.google.android.material.imageview.ShapeableImageView

            android:id="@+id/image_tapa"
            android:layout_width="0dp"
            android:layout_height="@dimen/image_height"
            android:background="@color/black"
            android:contentDescription="@string/image_description"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/white"
            app:layout_constraintStart_toStartOf="@id/text_num_position"
            app:layout_constraintEnd_toEndOf="@id/ic_cup"
            app:layout_constraintTop_toTopOf="@id/text_num_position"
            app:layout_constraintBottom_toBottomOf="@id/text_num_position"
            app:shapeAppearanceOverlay="@dimen/card_radius"
            android:alpha="0.5"/>

        <TextView
            android:layout_margin="@dimen/padding"
            android:id="@+id/text_num_position"
            android:layout_width="wrap_content"
            android:padding="@dimen/margin_s"
            android:layout_height="wrap_content"
            android:text="@string/text_num_position"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="@id/image_tapa"
            app:layout_constraintTop_toTopOf="@id/image_tapa" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ic_cup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/margin_s"
            android:src="@drawable/ic_cup"
            app:layout_constraintBottom_toBottomOf="@id/text_num_position"
            app:layout_constraintStart_toEndOf="@id/text_num_position"
            app:layout_constraintTop_toTopOf="@id/text_num_position" />

        <TextView
            android:id="@+id/text_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_s"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/text_description"
            android:textSize="@dimen/text_description"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/image_tapa"
            app:layout_constraintStart_toStartOf="@id/image_tapa"
            app:layout_constraintTop_toBottomOf="@id/image_tapa" />

        <TextView
            android:id="@+id/text_name_restaurant"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_s"
            android:text="@string/text_name_restaurant"
            android:textColor="@color/grey"
            app:layout_constraintEnd_toEndOf="@id/text_description"
            app:layout_constraintStart_toStartOf="@id/text_description"
            app:layout_constraintTop_toBottomOf="@id/text_description" />

        <TextView
            android:id="@+id/text_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_s"
            android:text="@string/text_total"
            android:textColor="@color/grey"
            app:layout_constraintStart_toStartOf="@id/text_name_restaurant"
            app:layout_constraintTop_toBottomOf="@id/text_name_restaurant" />

        <TextView
            android:id="@+id/text_points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_xs"
            android:text="@string/text_points"
            android:textColor="@color/grey"
            app:layout_constraintBottom_toBottomOf="@id/text_total"
            app:layout_constraintStart_toEndOf="@id/text_total"
            app:layout_constraintTop_toTopOf="@id/text_total" />

        <TextView
            android:id="@+id/text_pts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_xs"
            android:text="@string/text_pts"
            android:textColor="@color/grey"
            app:layout_constraintBottom_toBottomOf="@id/text_points"
            app:layout_constraintStart_toEndOf="@id/text_points"
            app:layout_constraintTop_toTopOf="@id/text_points" />

        <TextView
            android:id="@+id/text_average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_xs"
            android:text="@string/text_average"
            android:textColor="@color/grey"
            app:layout_constraintBottom_toBottomOf="@id/text_pts"
            app:layout_constraintStart_toEndOf="@id/text_pts"
            app:layout_constraintTop_toTopOf="@id/text_pts" />

        <TextView
            android:id="@+id/text_total_average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_xs"
            android:text="@string/total_average"
            android:textColor="@color/grey"
            app:layout_constraintBottom_toBottomOf="@id/text_average"
            app:layout_constraintStart_toEndOf="@id/text_average"
            app:layout_constraintTop_toTopOf="@id/text_average" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/icon_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_xs"
            android:src="@drawable/ic_star_fill1"
            android:tint="@color/yellow"
            app:layout_constraintBottom_toBottomOf="@id/text_total_average"
            app:layout_constraintStart_toEndOf="@id/text_total_average"
            app:layout_constraintTop_toTopOf="@id/text_total_average" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/icon_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_l"
            android:src="@drawable/ic_favorite"
            app:layout_constraintBottom_toBottomOf="@id/icon_star"
            app:layout_constraintEnd_toEndOf="@id/image_tapa"
            app:layout_constraintTop_toTopOf="@id/icon_star" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/icon_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_l"
            android:src="@drawable/ic_share"
            app:layout_constraintBottom_toBottomOf="@id/icon_favorite"
            app:layout_constraintEnd_toStartOf="@id/icon_favorite"
            app:layout_constraintTop_toTopOf="@id/icon_favorite" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>